<resources>
    <string name="app_name">FitS</string>
    <string name="title">FitS</string>
    <string name="slogan">Независимо от того, кем вы являетесь, дома, в офисе или на пляже, мы будем поддерживать вас в форме.</string>
    <string name="signup">РЕГИСТРАЦИЯ</string>
    <string name="signin">ВХОД</string>
    <string name="hint">Email</string>
    <string name="hint2">Возраст</string>
    <string name="hint3">Пол (F/M)</string>
    <string name="hint4">Пароль</string>
    <string name="physical">Главное меню</string>
    <string name="todo">ДЕЛАТЬ</string>
    <string name="exer">Упражнение</string>
    <string name="food">Еда</string>
    <string name="work">Тренировка</string>
    <string name="bmi">ИМТ</string>
    <string name="about">About</string>
    <string name="title_activity_workout_layout">WorkoutLayout</string>
    <string name="seven">7 минутная тренировка</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="full">Полная тренировка</string>
    <string name="weight">Вес (кг)</string>
    <string name="height">Рост (см)</string>
    <string name="very_severely_underweight">Очень сильно пониженный вес</string>
    <string name="severely_underweight">Сильно недостаточный вес</string>
    <string name="underweight">Недостаточный вес</string>
    <string name="normal">Норма</string>
    <string name="overweight">Избыточный вес</string>
    <string name="obese_class_i">Умеренное ожирение</string>
    <string name="obese_class_ii">Сильноу ожирение</string>
    <string name="obese_class_iii">Очень сильное ожирение</string>
    <string name="calculate">Рассчитать</string>
    <string name="close">Закрыть</string>
    <string name="gm">г</string>
    <string name="calculate_your_calorie_intake">Рассчитайте количество потребляемых калорий</string>
    <string name="next">След.</string>
    <string name="food_item">Продукт</string>
    <string name="measure">Мера</string>
    <string name="quantity">Количество</string>
    <string name="_0">0</string>
    <string name="name">Имя</string>
    <string name="reset">СБРОС</string>
    <string name="FALSE">FALSE</string>
    <string name="calorie_counter">Счётчик калорий</string>
    <string name="search">Поиск</string>
    <string name="gender">Пол</string>
    <string name="age">Возраст</string>
    <string name="data_not_received">Нет данных</string>
    <string name="TRUE">TRUE</string>
    <string name="calorie">Калории</string>
    <string name="add">Добавить</string>
    <string name="goback">НАЗАД</string>
    <string name="delete">УДАЛИТЬ</string>
    <string name="bmical">Калькулятор ИМТ</string>
    <string name="your_calorie_intake">Ваша норма калорий: </string>
    <string name="kcal">ккал</string>
    <string name="just_seven_info">7-минутная тренировка основана на HICT (круговая тренировка высокой интенсивности), которая оказалась наиболее «безопасной, эффективной и действенной» для занятых людей.</string>
    <string name="just_seven">ПРОСТАЯ СЕМЕРКА</string>
    <string name="thirty_days">ТРИДЦАТЬ ДНЕЙ</string>
    <string name="thirty_days_info">30-дневное испытание предназначено для человека, который любит сложные задачи и его конечной целью является поддержание спортивного тела.</string>
    <string name="your_profile">ВАШ ПРОФИЛЬ</string>
    <string name="safe">СОХРАНИТЬ</string>
    <string name="edit">РЕДАКТИРОВАТЬ</string>
    <string name="spiderman_push_ups_info">         Начните с обычной позы для отжиманий: опуская туловище вниз, согните и поднимите одну ногу в сторону. Затем вернитесь в исходное положение и переключитесь на другую ногу. Не забывайте держать тело прямо.</string>
    <string name="bridge_info">         Лягте на пол и оторвите бедра от пола, удерживая спину прямо в этом положении как можно дольше. Упражнение «мост» укрепляет весь живот, нижнюю часть спины и ягодицы.</string>
    <string name="high_stepping_info">         Бегите на месте, подтягивая колени как можно выше при каждом шаге. Держите верхнюю часть тела прямо во время упражнения.</string>
    <string name="incline_push_ups_info">         Начните с обычного положения для отжиманий, но положите руки на стул или скамью. Затем подтолкните свое тело вверх и вниз, используя силу рук. Не забывайте держать тело прямо.             </string>
    <string name="left_lunge_knee_hops_info">        Встаньте прямо. Затем отведите левую ногу назад и опустите туловище. Поднимаясь, поднимите левое колено как можно выше. Вернитесь в исходное положение и повторите упражнение.             </string>
    <string name="wall_sit_info">         Начните со спины к стене, они скользят вниз, пока ваши колени не окажутся под углом 90 градусов. Держитесь спиной к стене, руки и руки подальше от ног. Упражнение направлено на укрепление четырехглавой мышцы.             </string>
    <string name="jumping_jacks_info">        Сведите ноги вместе, руки по бокам, затем подпрыгните, расставив ноги и руки над головой. Вернитесь в исходное положение и сделайте следующее повторение. Это упражнение обеспечивает тренировку всего тела и прорабатывает все ваши большие группы мышц.             </string>
    <string name="long_arm_crunches_info">         Лягте на спину, согнув колени и поставив ступни на пол, руки положите прямо на макушку. Поднимите верхнюю часть тела от пола, затем медленно вернитесь в исходное положение. Упражнение увеличивает выносливость живота.             </string>
    <string name="push_up_and_rotation_info">        Начните с позиции отжимания. Затем сделайте отжимание и, поднимаясь, поверните верхнюю часть тела и вытяните правую руку вверх. Повторите упражнение с другой рукой. Это отличное упражнение для груди, плеч, рук и корпуса.</string>
    <string name="burpees_info">        Встаньте, расставив ступни на ширине плеч, затем положите руки на землю и отведите ступни назад. Сделайте быстрое отжимание, а затем подпрыгните.             </string>
    <string name="one_leg_push_ups_info">         Начните с классической позиции отжимания, но поднимите одну ногу вверх. Затем сделайте несколько отжиманий и переключитесь на другую ногу. Это воздействует на мышцы нижней части живота.             </string>
    <string name="wide_arm_push_ups_info">        Начните с обычной позы для отжиманий, но руки расставьте шире плеч. Затем подтолкните свое тело вверх и вниз. Не забывайте держать тело прямо.             </string>
    <string name="squats_info">         Встаньте, расставив ноги на ширине плеч и вытяните руки вперед, затем опустите тело, пока бедра не станут параллельны полу. Колени должны быть вытянуты в том же направлении, что и пальцы ног. Вернитесь в исходное положение и сделайте следующее повторение.             </string>
    <string name="russian_twist_info">         Сядьте на пол, согнув колени, ноги немного приподняты, а спина отклонена назад. Затем держите руки вместе и крутите из стороны в сторону.             </string>
    <string name="sit_ups_info">         Лягте на спину, заложив руки за уши. Затем поднимите верхнюю часть тела с пола и медленно вернитесь в положение сидя. Не тяните за шею, когда встаете. Медленно вернитесь в исходное положение и повторите упражнение.             </string>
    <string name="push_ups_info">        Лягте ничком на землю, поддерживая тело руками. Держите тело прямо, поднимая и опуская тело руками. Это упражнение прорабатывает грудь, плечи, трицепсы, спину и ноги.             </string>
    <string name="bicycle_crunches_info">        Лягте на пол, закинув руки за уши, поднимите колени и сомкните правый локоть в направлении левого колена, затем сомкните левый локоть в направлении правого колена. Повторите упражнение.             </string>
    <string name="plank_info">        Лягте на пол так, чтобы пальцы ног и предплечья были на земле. Держите тело прямо и удерживайте это положение как можно дольше. Это упражнение укрепляет живот, спину и плечи.             </string>
    <string name="reverse_crunches_info">             Лягте на спину, колени подняты под углом 90 градусов, руки за голову. Поднимите верхнюю часть тела и бедра, а затем потянитесь. Повторите это упражнение.        </string>
    <string name="knee_push_ups_info">             Начните с обычного отжимания, затем позвольте коленям коснуться пола и поднимите ступни над полом. Затем толкайте свое тело вверх и вниз.        </string>
    <string name="triceps_dips_info">             В исходное положение сядьте на стул. Затем отодвиньте бедро от стула, держась руками за край стула. Медленно согните и вытяните руки, чтобы ваше тело двигалось вверх и вниз. Это отличное упражнение на трицепс.        </string>
    <string name="abdominal_crunches_info">             Лягте на спину, согнув колени и вытянутые вперед руки. Затем оторвите верхнюю часть тела от пола. Задержитесь на несколько секунд и медленно вернитесь.        </string>
    <string name="decline_push_ups_info">             Встаньте на четвереньки, положив колени под попу, а руки - под плечи. Затем поднимите ноги на стуле или скамейке и толкайте тело вверх и вниз, в основном используя силу рук. Не забывайте держать тело прямо.        </string>
    <string name="split_squat_left_info">            Сделайте большой шаг вперед левой ногой и держите верхнюю часть тела прямо. Затем заставьте ваше тело двигаться прямо вниз и вверх.        </string>
    <string name="jumping_squats_info">             Начните с приседа, затем подпрыгните, используя мышцы живота для увеличения силы. Это упражнение проработает ваш живот.        </string>
    <string name="side_plank_left_info">             Лягте на левый бок, поддерживая тело предплечьем. Держите тело ровно. Это упражнение нацелено на мышцы живота и косые мышцы живота.        </string>
    <string name="mountain_climber_info">             Начните с позиции отжимания. Согните правое колено к груди и держите левую ногу прямо, затем быстро переключайтесь с одной ноги на другую. Это упражнение укрепляет несколько групп мышц.        </string>
    <string name="bird_dog_info">            Колени должны быть под ягодицами, а руки - под плечами. Затем одновременно вытяните правую ногу и левую руку. Задержитесь на пять секунд, затем вернитесь и повторите с другой стороной.        </string>
    <string name="spiderman_push_ups">SPIDERMAN PUSH-UPS</string>
    <string name="bridge">BRIDGE</string>
    <string name="high_stepping">HIGH STEPPING</string>
    <string name="incline_push_ups">INCLINE PUSH-UPS</string>
    <string name="left_lunge_knee_hops">LEFT LUNGE KNEE HOPS</string>
    <string name="wall_sit">WALL SIT</string>
    <string name="jumping_jacks">JUMPING JACKS</string>
    <string name="long_arm_crunches">LONG ARM CRUNCHES</string>
    <string name="push_up_and_rotation">PUSH-UP AND ROTATION</string>
    <string name="burpees">BURPEES</string>
    <string name="one_leg_push_ups">ONE LEG PUGH-UPS</string>
    <string name="wide_arm_push_ups">WIDE ARM PUSH-UPS</string>
    <string name="squats">SQUATS</string>
    <string name="russian_twist">RUSSIAN TWIST</string>
    <string name="sit_ups">SIT-UPS</string>
    <string name="push_ups">PUSH-UPS</string>
    <string name="bicycle_crunches">BICYCLE CRUNCHES</string>
    <string name="plank">PLANK</string>
    <string name="reverse_crunches">REVERSE CRUNCHES</string>
    <string name="knee_push_ups">KNEE PUSH-UPS</string>
    <string name="triceps_dips">TRICEPS DIPS</string>
    <string name="abdominal_crunches">ABDOMINAL CRUNCHES</string>
    <string name="decline_push_ups">DECLINE PUSH-UPS</string>
    <string name="split_squat_left">SPLIT SQUAT LEFT</string>
    <string name="jumping_squats">JUMPING SQUATS</string>
    <string name="side_plank_left">SIDE PLANK LEFT</string>
    <string name="mountain_climber">MOUNTAIN CLIMBER</string>
    <string name="bird_dog">BIRD DOG</string>
</resources>