<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClassicWorkout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/exercise_tv_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jumping_jacks"
            android:fontFamily="BOLD"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/img1"
            android:onClick="open1"
            android:layout_below="@+id/exercise_tv_1"
            />

        <TextView
            android:id="@+id/exercise_info_tv_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img1"
            android:fontFamily="BOLD"
            android:gravity="center"
            android:text="@string/jumping_jacks_info"
            android:textColor="@color/grey_dark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/exercise_tv_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/push_ups"
            android:fontFamily="BOLD"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_below="@+id/exercise_info_tv_1"
            android:layout_marginTop="8dp"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/img2"
            android:layout_below="@+id/exercise_tv_2"
            android:onClick="open2"
            />

        <TextView
            android:id="@+id/exercise_info_tv_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/push_ups_info"
            android:layout_below="@+id/img2"
            android:fontFamily="BOLD"
            android:gravity="center"
            android:textColor="@color/grey_dark"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/exercise_tv_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abdominal_crunches"
            android:fontFamily="BOLD"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_below="@+id/exercise_info_tv_2"
            android:layout_marginTop="8dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/img3"
            android:layout_below="@+id/exercise_tv_3"
            android:onClick="open3"
            />
        <TextView
            android:id="@+id/exercise_info_tv_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abdominal_crunches_info"
            android:layout_below="@+id/img3"
            android:fontFamily="BOLD"
            android:gravity="center"
            android:textColor="@color/grey_dark"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/exercise_tv_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/high_stepping"
            android:fontFamily="BOLD"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_below="@+id/exercise_info_tv_3"
            android:layout_marginTop="8dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/img4"
            android:layout_below="@+id/exercise_tv_4"
            android:onClick="open4"
            />
        <TextView
            android:id="@+id/exercise_info_tv_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/high_stepping_info"
            android:layout_below="@+id/img4"
            android:fontFamily="BOLD"
            android:gravity="center"
            android:textColor="@color/grey_dark"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/exercise_tv_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/squats"
            android:fontFamily="BOLD"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_below="@+id/exercise_info_tv_4"
            android:layout_marginTop="8dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/img5"
            android:layout_below="@+id/exercise_tv_5"
            android:onClick="open5"
            />
        <TextView
            android:id="@+id/exercise_info_tv_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/squats_info"
            android:layout_below="@+id/img5"
            android:fontFamily="BOLD"
            android:gravity="center"
            android:textColor="@color/grey_dark"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/exercise_tv_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/triceps_dips"
            android:fontFamily="BOLD"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_below="@+id/exercise_info_tv_5"
            android:layout_marginTop="8dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/img6"
            android:layout_below="@+id/exercise_tv_6"
            android:onClick="open6"
            />
        <TextView
            android:id="@+id/exercise_info_tv_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/triceps_dips_info"
            android:layout_below="@+id/img6"
            android:fontFamily="BOLD"
            android:gravity="center"
            android:textColor="@color/grey_dark"
            android:textSize="12sp"

            />
        <TextView
            android:id="@+id/exercise_tv_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plank"
            android:fontFamily="BOLD"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_below="@+id/exercise_info_tv_6"
            android:layout_marginTop="8dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/img7"
            android:layout_below="@+id/exercise_tv_7"
            android:onClick="open7"
            />
        <TextView
            android:id="@+id/exercise_info_tv_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plank_info"
            android:layout_below="@+id/img7"
            android:fontFamily="BOLD"
            android:gravity="center"
            android:textColor="@color/grey_dark"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/exercise_tv_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/left_lunge_knee_hops"
            android:fontFamily="BOLD"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_below="@+id/exercise_info_tv_7"
            android:layout_marginTop="8dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/img8"
            android:layout_below="@+id/exercise_tv_8"
            android:onClick="open8"
            />
        <TextView
            android:id="@+id/exercise_info_tv_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/left_lunge_knee_hops_info"
            android:layout_below="@+id/img8"
            android:fontFamily="BOLD"
            android:gravity="center"
            android:textColor="@color/grey_dark"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/exercise_tv_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/push_up_and_rotation"
            android:fontFamily="BOLD"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_below="@+id/exercise_info_tv_8"
            android:layout_marginTop="8dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/img9"
            android:layout_below="@+id/exercise_tv_9"
            android:onClick="open9"
            />
        <TextView
            android:id="@+id/exercise_info_tv_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/push_up_and_rotation_info"
            android:layout_below="@+id/img9"
            android:fontFamily="BOLD"
            android:gravity="center"
            android:textColor="@color/grey_dark"
            android:textSize="12sp"
            />
    </RelativeLayout>
</ScrollView>
