<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".GridLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8">

        <TextView
            android:id="@+id/textGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:fontFamily="cursive"
            android:text="@string/physical"
            android:textColor="@color/black"
            android:textSize="44sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_cal_calculate"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/main_back_dark"
        android:contentDescription="@string/food"
        android:text="@string/calorie_counter"
        android:textSize="30dp"></Button>

    <Button
        android:id="@+id/button_workout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/work"
        android:text="@string/work"
        android:textSize="30dp"
        android:background="@drawable/main_back_dark"></Button>

    <Button
        android:id="@+id/button_profile"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/your_profile"
        android:text="@string/your_profile"
        android:textSize="30dp"
        android:background="@drawable/main_back_dark"></Button>


</LinearLayout>
