<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    tools:context=".WorkoutLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <TextView
                android:id="@+id/just_seven"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/just_seven"
                android:fontFamily="BOLD"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:layout_marginTop="24dp"
                android:onClick="justSeven"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/title_back_rec">
            </TextView>
            <TextView
                android:id="@+id/just_seven_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/just_seven_info"
                android:fontFamily="BOLD"
                android:gravity="center"
                android:textColor="@color/grey_dark"
                android:textSize="20sp"
                android:layout_below="@+id/just_seven"
                android:onClick="justSeven"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/white_back_rec">
            </TextView>

        <TextView
            android:id="@+id/thirty_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thirty_days"
            android:fontFamily="BOLD"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/just_seven_info"
            android:onClick="thirtyDays"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/title_back_rec">
        </TextView>
        <TextView
            android:id="@+id/thirty_days_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thirty_days_info"
            android:fontFamily="BOLD"
            android:gravity="center"
            android:textColor="@color/grey_dark"
            android:textSize="20sp"
            android:layout_below="@+id/thirty_days"
            android:onClick="thirtyDays"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/white_back_rec">
        </TextView>

    </RelativeLayout>


</ScrollView>
