<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginp"
    tools:context=".SignIn">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="186dp"
        android:layout_marginRight="60dp"
        android:hint="@string/hint"
        android:textColor="@color/black"
        android:textColorHint="@android:color/white"
        android:textSize="20sp"
        app:met_baseColor="@color/white"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/white"
        app:met_singleLineEllipsis="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editUsername"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="81dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="68dp"
        android:hint="@string/hint4"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@android:color/white"
        android:textSize="20sp"
        app:met_baseColor="@color/white"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/white"
        app:met_singleLineEllipsis="true" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_below="@+id/editPassword"
        android:layout_alignParentRight="true"
        android:layout_marginTop="64dp"

        android:layout_marginRight="112dp"
        android:background="@drawable/roundb"
        android:text="@string/signin"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>

